--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
     "name": "Penny Partner",
     "short_name": "Penny Partner",
     "description": "A smart tool to track and manage your income and expenses.",
-    "start_url": "/",
+    "start_url": "index.html",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#4CAF50",
+    "theme_color": "#000000",
     "icons": [
       {
         "src": "./images/app-logo.png",
